--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="crosu">#E53935</color>
+    <color name="cvisiniu">#D81B60</color>
+    <color name="cmov">#8E24AA</color>
+    <color name="calbastru">#1E88E5</color>
+    <color name="cgalben">#FDD835</color>
+    <color name="white">#ffffff</color>
+
 </resources>
