--- a/app/src/main/res/layout/activity_zi.xml
+++ b/app/src/main/res/layout/activity_zi.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".orar.OrarActivity">
+    tools:context=".orar.ZiActivity">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/weekDaysList"
+    <TextView
+        android:id="@+id/numeZi"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="40sp"
+        android:gravity="center" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
