--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -1,9 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyProfileActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/yellow"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="25dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="#FDD835"
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imagine_profil"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="25dp"
+                android:src="@drawable/profile_icon" />
+
+            <TextView
+                android:id="@+id/numeutilizator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:text="@string/Nume_utilizator"
+                android:textSize="25sp" />
+
+            <ImageView
+                android:id="@+id/alege_poze"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="-100dp"
+                android:focusable="true"
+                android:src="@drawable/ic_baseline_add_circle_outline_green"
+                tools:ignore="ContentDescription" />
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="105dp"
+                android:background="@color/yellow"
+                android:drawableLeft="@drawable/ic_baseline_settings_24"
+                android:drawablePadding="-15dp"
+                android:text="@string/Setari" />
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="25dp"
+                android:background="@color/yellow"
+                android:drawableLeft="@drawable/ic_baseline_notifications_24"
+                android:drawablePadding="-25dp"
+                android:text="@string/notificatii" />
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="25dp"
+                android:background="@color/yellow"
+                android:drawableLeft="@drawable/ic_baseline_add_24"
+                android:drawablePadding="-10dp"
+                android:text="@string/Adauga_cont" />
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="25dp"
+                android:background="@color/yellow"
+                android:drawableLeft="@drawable/ic_baseline_help_24"
+                android:drawablePadding="-35dp"
+                android:text="@string/ajutor" />
+
+            <Button
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:background="@color/yellow"
+                android:drawableTop="@drawable/ic_baseline_exit_to_app_24"
+                android:text="@string/Logout" />
+        </LinearLayout>
+    </ScrollView>
+    -->
+
+
+</LinearLayout>
