Add icon,add launch

--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -10,32 +10,33 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/yellow"
+        android:background="@drawable/background_profile"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="25dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="#FDD835"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             tools:ignore="MissingConstraints">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imagine_profil"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="60dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:src="@drawable/profile_icon" />
 
             <TextView
                 android:id="@+id/numeutilizator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/imagine_profil"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/Nume_utilizator"
                 android:textSize="25sp" />
 
@@ -43,54 +44,66 @@
                 android:id="@+id/alege_poze"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="-100dp"
+                app:layout_constraintTop_toBottomOf="@+id/imagine_profil"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:focusable="true"
                 android:src="@drawable/ic_baseline_add_circle_outline_green"
                 tools:ignore="ContentDescription" />
 
             <Button
                 style="?android:attr/borderlessButtonStyle"
+                android:id="@+id/setari"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="105dp"
-                android:background="@color/yellow"
-                android:drawableLeft="@drawable/ic_baseline_settings_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/numeutilizator"
+                android:layout_marginTop="40dp"
+                android:background="@color/transparent"
+                android:drawableStart="@drawable/ic_baseline_settings_24"
                 android:drawablePadding="-15dp"
                 android:text="@string/Setari" />
 
             <Button
+                android:id="@+id/notificari"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:background="@color/yellow"
-                android:drawableLeft="@drawable/ic_baseline_notifications_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/setari"
+                android:layout_marginTop="20dp"
+                android:background="@color/transparent"
+                android:drawableStart="@drawable/ic_baseline_notifications_24"
                 android:drawablePadding="-25dp"
                 android:text="@string/notificatii" />
 
             <Button
+                android:id="@+id/add"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:background="@color/yellow"
-                android:drawableLeft="@drawable/ic_baseline_add_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/notificari"
+                android:layout_marginTop="20dp"
+                android:background="@color/transparent"
+                android:drawableStart="@drawable/ic_baseline_add_24"
                 android:drawablePadding="-10dp"
                 android:text="@string/Adauga_cont" />
 
             <Button
+                android:id="@+id/help"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:background="@color/yellow"
-                android:drawableLeft="@drawable/ic_baseline_help_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/add"
+                android:layout_marginTop="20dp"
+                android:background="@color/transparent"
+                android:drawableStart="@drawable/ic_baseline_help_24"
                 android:drawablePadding="-35dp"
                 android:text="@string/ajutor" />
 
@@ -98,14 +111,13 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/help"
                 android:layout_marginTop="60dp"
-                android:background="@color/yellow"
+                android:background="@color/transparent"
                 android:drawableTop="@drawable/ic_baseline_exit_to_app_24"
                 android:text="@string/Logout" />
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-    -->
-
-
 </LinearLayout>
