--- a/app/src/main/res/layout/item_message_receive.xml
+++ b/app/src/main/res/layout/item_message_receive.xml
@@ -43,7 +43,7 @@
             android:layout_marginTop="4dp"
             android:text="Salut. Mesaj 2 generat automat"/>
         <TextView
-            android:id="@+id/text_message_time"
+            android:id="@+id/text_message_time_r"
             android:text="11:40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
