--- a/app/src/main/res/layout/item_message_receive.xml
+++ b/app/src/main/res/layout/item_message_receive.xml
@@ -20,7 +20,7 @@
             app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
-            android:id="@+id/text_message_name"
+            android:id="@+id/text_message_name_r"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nume Prof."
@@ -37,7 +37,7 @@
             android:background="@drawable/bg_received_message"
             android:padding="16dp"
             android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/text_message_name"
+            app:layout_constraintTop_toBottomOf="@id/text_message_name_r"
             app:layout_constraintLeft_toRightOf="@id/image_message_profile"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
