--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -23,22 +23,24 @@
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                android:layout_width="match_parent"
+                android:layout_width="290dp"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/white"/>
+                android:background="@drawable/bg_actionbar"
+                android:layout_marginLeft="10dp"
+                />
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:foregroundGravity="">
+                android:layout_height="match_parent">
+
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardviewOrar"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
-                    android:layout_marginTop="90dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
                     android:clickable="true"
                     android:elevation="16dp"
@@ -83,7 +85,7 @@
                     android:id="@+id/cardviewMap"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
-                    android:layout_marginTop="90dp"
+                    android:layout_marginTop="30dp"
                     android:clickable="true"
                     android:elevation="16dp"
                     android:foreground="?android:attr/selectableItemBackground"
@@ -124,7 +126,7 @@
                     android:id="@+id/cardviewChat"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
-                    android:layout_marginTop="270dp"
+                    android:layout_marginTop="230dp"
                     android:layout_marginRight="20dp"
                     android:clickable="true"
                     android:elevation="16dp"
@@ -170,7 +172,7 @@
                     android:id="@+id/cardviewExamene"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
-                    android:layout_marginTop="270dp"
+                    android:layout_marginTop="230dp"
                     android:clickable="true"
                     android:elevation="16dp"
                     android:foreground="?android:attr/selectableItemBackground"
@@ -213,7 +215,7 @@
                     android:id="@+id/cardviewProfil"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:clickable="true"
                     android:elevation="16dp"
                     android:foreground="?android:attr/selectableItemBackground"
@@ -266,9 +268,6 @@
             app:headerLayout="@layout/header"
             app:menu="@menu/drawer_menu"
             />
-
-
-
 
 
     </androidx.drawerlayout.widget.DrawerLayout>
