--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,18 @@
             android:textSize="16sp"
             android:autofillHints="" />
 
+        <CheckBox
+            android:id="@+id/login_remember"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="right"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/remember_me"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
         <Button
             android:id="@+id/loginBtn"
             android:layout_width="fill_parent"
