--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-   >
+    xmlns:tools="http://schemas.android.com/tools">
 
- <group android:checkableBehavior="single">
-     <item android:id="@+id/drawer_orar"
-           android:icon="@drawable/ic_orar"
-           android:title="Orar"/>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/drawer_orar"
+            android:icon="@drawable/ic_orar"
+            android:title="Orar" />
 
-     <item android:id="@+id/drawer_harta"
-         android:icon="@drawable/ic_harta"
-         android:title="Harta"/>
+        <item
+            android:id="@+id/drawer_harta"
+            android:icon="@drawable/ic_harta"
+            android:title="Harta" />
 
-     <item android:id="@+id/drawer_chat"
-         android:icon="@drawable/ic_chat"
-         android:title="Chat"/>
+        <item
+            android:id="@+id/drawer_chat"
+            android:icon="@drawable/ic_chat"
+            android:title="Chat" />
 
-     <item android:id="@+id/drawer_examene"
-         android:icon="@drawable/ic_examene"
-         android:title="Examene"/>
+        <item
+            android:id="@+id/drawer_examene"
+            android:icon="@drawable/ic_examene"
+            android:title="Examene" />
 
-     <item android:id="@+id/drawer_profil"
-         android:icon="@drawable/ic_profil"
-         android:title="Profil"/>
- </group>
+        <item
+            android:id="@+id/drawer_profil"
+            android:icon="@drawable/ic_profil"
+            android:title="Profil" />
+    </group>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:background="@color/black" />
+
+    <item
+        android:id="@+id/drawer_logout"
+        android:icon="@drawable/ic_logout"
+        android:title="@string/Logout" />
+
 </menu>
